--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <input type="text" placeholder="Search Gifs" id="searchGifs">
+    <input type="text" placeholder="Search Imguar Library" id="searchGifs">
     <button id="xhr-btn">Search using XHR</button>
     <button id="fetch-btn">Search using Fetch</button>
     <button id="fetch-async-btn">Search using Fetch async/await</button>
